--- a/.gitignore
+++ b/.gitignore
@@ -86,4 +86,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.DS_Store
+UML diagram/.DS_Store
+UML\ diagram/.DS_Store
+
 .gitignore
