--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>20.1.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
