--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
           <scope>compile</scope>
       </dependency>
       <dependency>
-          <groupId>org.testing</groupId>
-          <artifactId>testing</artifactId>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
           <version>RELEASE</version>
           <scope>compile</scope>
       </dependency>
