--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
   </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>RELEASE</version>
+          <scope>provided</scope>
+      </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
