--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
       <dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
-          <version>RELEASE</version>
+          <version>2.8.6</version>
           <scope>provided</scope>
       </dependency>
     <dependency>
