Modifie GUI Class

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
+src/main/resources
+
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
