--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,8 @@ src/main/resources/scoring\ tokens
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.idea/
+
 .DS_Store
 UML diagram/.DS_Store
 UML\ diagram/.DS_Store
